--- a/week19/index.html
+++ b/week19/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
+    <title>WareHouse</title>
   </head>
   <body>
     <div id="root"></div>
